fixed bug where body overflow was set to hidden when choosing red in the prompt

--- a/public/style.css
+++ b/public/style.css
@@ -295,7 +295,7 @@ footer {
     transform: translateX(-100%);
     z-index: 9999;
     width: 50%;
-    height: 92vh;
+    height: calc(100%-80px);
     background-color: rgb(32, 32, 32);
     display: flex;
     flex-direction: column;
